--- a/app/views/LA.erb
+++ b/app/views/LA.erb
@@ -18,9 +18,10 @@
     <a href="https://disneyland.disney.go.com/">Learn More</a>
     </li>
     <li><%= "#{LA.food[3]}"%> <br>
-    <a href="">Learn More</a>
+    <a href="https://newportseafood.com/">Learn More</a>
     </li>
     <li><%= "#{LA.food[4]}"%> <br>
+    <a href="http://www.jonandvinnys.com/">Learn More</a>
     </li>
     <li><%= "#{LA.food[5]}"%> <br>
     <a href="https://m.facebook.com/Apple-Pan-192506054129735/">Learn More</a>
