--- a/app/views/Raleigh.erb
+++ b/app/views/Raleigh.erb
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    
     <title>KWKtravelz</title>
   </head>
   <body>
-  <h1>Raleigh</h1>
-  <br>
+ <img src="https://document-export.canva.com/DAC_O9GTWfI/77/preview/0001-1627123034.png">
+
+<div class="everything">
+<div class="food">
+  
+  
   <h2>Food</h2>
   <ul>
     <li><%= "#{Raleigh.food[0]}"%> <br>
@@ -32,11 +35,12 @@
     <li><%= "#{Raleigh.food[5]}"%><br> 
     <a href="http://www.goodberrys.com/">learn more!</a>
     </li>
+    </ul>
+    </div>
+    <div class="attraction">
+    <h2>Attractions</h2>
+    <ul>
     
-  </ul>
-  <br>
-  <h2>Attractions</h2>
-  <ul>
     <li><%= "#{Raleigh.attraction[0]}"%> <br>
     <a href="http://naturalsciences.org/">learn more!</a>
     </li>
@@ -59,6 +63,24 @@
     
     <li><%= "#{Raleigh.attraction[5]}"%><br> 
     <a href="https://crabtree-valley-mall.com/">learn more!</a>
-    </li>
-  </body>
-</html>
+   </li>
+    </ul>
+    </div>
+    </div>
+    </body>
+    </html>
+<style>
+  img{https://document-export.canva.com/DAC_O7yCyRw/14/preview/0001-1627122833.png
+    width: 1265px;
+    height: 500px;
+  }
+
+  .food{
+    display: inline-block;
+    width: 600px;
+  }
+  .attraction{
+    display: inline-block;
+    width: 600px;
+  }
+</style>
