--- a/app/views/Chicago.erb
+++ b/app/views/Chicago.erb
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    
     <title>KWKtravelz</title>
   </head>
   <body>
-  <h1>Chicago</h1>
-  <br>
+ <img src="https://document-export.canva.com/DAC_OzkUztY/8/preview/0001-1627123000.png">
+
+<div class="everything">
+<div class="food">
+  
   <h2>Food</h2>
   <ul>
+  
     <li><%= "#{Chicago.food[0]}"%> <br>
     <a href="https://www.alinearestaurant.com/">learn more!</a>
     </li>
@@ -33,11 +36,11 @@
     <li><%= "#{Chicago.food[5]}"%><br> 
     <a href="https://www.portillos.com/index.html">learn more!</a>
     </li>
-    
-  </ul>
-  <br>
-  <h2>Attractions</h2>
-  <ul>
+    </ul>
+    </div>
+    <div class="attraction">
+    <h2>Attractions</h2>
+    <ul>
     <li><%= "#{Chicago.attraction[0]}"%> <br>
     <a href="https://www.sheddaquarium.org/">learn more!</a>
     </li>
@@ -61,5 +64,23 @@
     <li><%= "#{Chicago.attraction[5]}"%><br> 
     <a href="https://www.msichicago.org/">learn more!</a>
     </li>
-  </body>
-</html>
+    </ul>
+    </div>
+    </div>
+    </body>
+    </html>
+<style>
+  img{https://document-export.canva.com/DAC_O7yCyRw/14/preview/0001-1627122833.png
+    width: 1265px;
+    height: 500px;
+  }
+
+  .food{
+    display: inline-block;
+    width: 600px;
+  }
+  .attraction{
+    display: inline-block;
+    width: 600px;
+  }
+</style>
