--- a/app/views/LA.erb
+++ b/app/views/LA.erb
@@ -4,49 +4,80 @@
     <title>KWKtravelz</title>
   </head>
   <body>
-  <h1>Los Angeles</h1>
-  <br>
+ <img src="https://document-export.canva.com/DAC_O9hkqxc/15/preview/0001-1627122958.png">
+
+<div class="everything">
+<div class="food">
+  
   <h2>Food</h2>
   <ul>
+    
     <li><%= "#{LA.food[0]}"%><br> 
     <a href="http://www.dantanasrestaurant.com/">Learn More</a>
     </li>
+    
     <li><%= "#{LA.food[1]}"%><br>
     <a href="http://www.guerrillatacos.com/">Learn More</a>
     </li>
+    
     <li><%= "#{LA.food[2]}"%> <br>
     <a href="https://disneyland.disney.go.com/">Learn More</a>
     </li>
+    
     <li><%= "#{LA.food[3]}"%> <br>
     <a href="https://newportseafood.com/">Learn More</a>
     </li>
+    
     <li><%= "#{LA.food[4]}"%> <br>
     <a href="http://www.jonandvinnys.com/">Learn More</a>
     </li>
+    
     <li><%= "#{LA.food[5]}"%> <br>
     <a href="https://m.facebook.com/Apple-Pan-192506054129735/">Learn More</a>
     </li>
-    
-  </ul>
-  <br>
-  <h2>Attractions</h2>
-  <ul>
+    </ul>
+    </div>
+    <div class="attraction">
+    <h2>Attractions</h2>
+    <ul>
    <li><%= "#{LA.attraction[0]}"%><br> 
     <a href="http://www.universalstudioshollywood.com/">Learn More!</a>
     </li>
+    
     <li><%= "#{LA.attraction[1]}"%><br>
     <a href="www.laparks.org/dos/parks/griffithPK/griffith.htm">Learn More!</a>
     </li>
+    
     <li><%= "#{LA.attraction[2]}"%> <br>
     <a href="https://www.philippes.com/us.html">Learn More!</a>
     </li>
+    
     <li><%= "#{LA.attraction[3]}"%> <br>
     </li>
+    
     <li><%= "#{LA.attraction[4]}"%> <br>
     </li>
+    
     <li><%= "#{LA.attraction[5]}"%> <br>
     <a href="https://www.nhm.org">Learn More!</a>
-    </li> 
-  </ul>
-  </body>
-</html>
+     </li>
+    </ul>
+    </div>
+    </div>
+    </body>
+    </html>
+<style>
+  img{https://document-export.canva.com/DAC_O7yCyRw/14/preview/0001-1627122833.png
+    width: 1265px;
+    height: 500px;
+  }
+
+  .food{
+    display: inline-block;
+    width: 600px;
+  }
+  .attraction{
+    display: inline-block;
+    width: 600px;
+  }
+</style>
