--- a/app/views/NYC.erb
+++ b/app/views/NYC.erb
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-  
     <title>KWKtravelz</title>
   </head>
   <body>
-  <h1>New York City</h1>
-  <br>
+ <img src="https://document-export.canva.com/DAC_Oxnp5xI/14/preview/0001-1627164602.png">
+
+<div class="everything">
+<div class="food">
+  
   <h2>Food</h2>
   <ul>
     <li><%= "#{New_York_City.food[0]}" %></li>
@@ -32,10 +34,11 @@
      <li><%= "#{New_York_City.food[5]}" %></li>
     <a href ="http://www.pisillopanini.com/">link</a>
     </li>
-     </ul>
-     
-     <h2>Attractions</h2>
-<ul>
+    </ul>
+    </div>
+    <div class="attraction">
+    <h2>Attractions</h2>
+    <ul>
   <li><%= "#{New_York_City.attractions[0]}" %></li>
     <a href ="http://www.esbnyc.com/ ">link</a>
     </li>
@@ -60,5 +63,22 @@
     <a href ="https://www.nyc.com/broadway_tickets/?gclid=CjwKCAjw14rbBRB3EiwAKeoG_2sWhn49Qt2RsbhoXVLMPeC6_zzooln-EYENF31jy8BrRowNQnrf5xoCAt4QAvD_BwE">link</a>
     </li>
     </ul>
-  </body>
-</html>
+    </div>
+    </div>
+    </body>
+    </html>
+<style>
+  img{https://document-export.canva.com/DAC_Oxnp5xI/14/preview/0001-1627164602.png
+    width: 1265px;
+    height: 500px;
+  }
+
+  .food{
+    display: inline-block;
+    width: 600px;
+  }
+  .attraction{
+    display: inline-block;
+    width: 600px;
+  }
+</style>
