--- a/app/views/Seattle.erb
+++ b/app/views/Seattle.erb
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-   <title>KWKtravels</title>
+    <title>KWKtravelz</title>
   </head>
   <body>
-    <h1>Seattle</h1>
-    <ul>
+ <img src="https://document-export.canva.com/DAC_O618XfQ/9/preview/0001-1627122922.png">
+
+<div class="everything">
+<div class="food">
+  
+  <h1>Food</h1>
+  <ul>
       <li><%= "#{Seattle.food[0]}" %></li>
     <a href ="https://alturarestaurant.com/">link</a>
     </li>
@@ -29,10 +34,11 @@
      <li><%= "#{Seattle.food[5]}" %></li>
     <a href ="https://www.yelp.com/biz/tacos-chukis-seattle">link</a>
     </li>
-  </ul>
-  
-  <h2>Attraction</h2>
-  <ul>
+    </ul>
+    </div>
+    <div class="attraction">
+    <h1>Attractions</h1>
+    <ul>
     <li><%= "#{Seattle.attraction[0]}" %></li>
     <a href ="https://www.seattleaquarium.org/">link</a>
     </li>
@@ -57,5 +63,22 @@
     <a href ="http://seattlegreatwheel.com/">link</a>
     </li>
     </ul>
-  </body>
-</html>
+    </div>
+    </div>
+    </body>
+    </html>
+<style>
+  img{https://document-export.canva.com/DAC_O618XfQ/9/preview/0001-1627122922.png
+    width: 1265px;
+    height: 500px;
+  }
+
+  .food{
+    display: inline-block;
+    width: 600px;
+  }
+  .attraction{
+    display: inline-block;
+    width: 600px;
+  }
+</style>
