--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,1 +1,24 @@
-<h1>this is your homepage</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>KWKtravelz</title>
+  </head>
+  <body>
+ <img src="https://document-export.canva.com/DAC_NuiJHZs/54/preview/0001-1626973602.png">
+ </head>
+ 
+ <style>
+  img{https://document-export.canva.com/DAC_NuiJHZs/54/preview/0001-1626973602.png
+    width: 1265px;
+    height: 500px;
+  }
+
+  .food{
+    display: inline-block;
+    width: 600px;
+  }
+  .attraction{
+    display: inline-block;
+    width: 600px;
+  }
+</style>
