--- a/app/views/LA.erb
+++ b/app/views/LA.erb
@@ -13,27 +13,27 @@
   <ul>
     
     <li><%= "#{LA.food[0]}"%><br> 
-    <a href="http://www.dantanasrestaurant.com/">Learn More</a>
+    <a href="http://www.dantanasrestaurant.com/">learn more!</a>
     </li>
     
     <li><%= "#{LA.food[1]}"%><br>
-    <a href="http://www.guerrillatacos.com/">Learn More</a>
+    <a href="http://www.guerrillatacos.com/">learn more!</a>
     </li>
     
     <li><%= "#{LA.food[2]}"%> <br>
-    <a href="https://disneyland.disney.go.com/">Learn More</a>
+    <a href="https://disneyland.disney.go.com/">learn more!</a>
     </li>
     
     <li><%= "#{LA.food[3]}"%> <br>
-    <a href="https://newportseafood.com/">Learn More</a>
+    <a href="https://newportseafood.com/">learn more!</a>
     </li>
     
     <li><%= "#{LA.food[4]}"%> <br>
-    <a href="http://www.jonandvinnys.com/">Learn More</a>
+    <a href="http://www.jonandvinnys.com/">learn more!</a>
     </li>
     
     <li><%= "#{LA.food[5]}"%> <br>
-    <a href="https://m.facebook.com/Apple-Pan-192506054129735/">Learn More</a>
+    <a href="https://m.facebook.com/Apple-Pan-192506054129735/">learn more!</a>
     </li>
     </ul>
     </div>
@@ -41,25 +41,27 @@
     <h1>Attractions</h1>
     <ul>
    <li><%= "#{LA.attraction[0]}"%><br> 
-    <a href="http://www.universalstudioshollywood.com/">Learn More!</a>
+    <a href="http://www.universalstudioshollywood.com/">learn more!</a>
     </li>
     
     <li><%= "#{LA.attraction[1]}"%><br>
-    <a href="www.laparks.org/dos/parks/griffithPK/griffith.htm">Learn More!</a>
+    <a href="www.laparks.org/dos/parks/griffithPK/griffith.htm">learn more!</a>
     </li>
     
     <li><%= "#{LA.attraction[2]}"%> <br>
-    <a href="https://www.philippes.com/us.html">Learn More!</a>
+    <a href="https://www.philippes.com/us.html">learn more!</a>
     </li>
     
     <li><%= "#{LA.attraction[3]}"%> <br>
+    <a href="www.visitwesthollywood.com/">learn more!</a>
     </li>
     
     <li><%= "#{LA.attraction[4]}"%> <br>
+    <a href="https://www.santamonica.com/">learn more!</a>
     </li>
     
     <li><%= "#{LA.attraction[5]}"%> <br>
-    <a href="https://www.nhm.org">Learn More!</a>
+    <a href="https://www.nhm.org">learn more!</a>
      </li>
     </ul>
     </div>
