--- a/app/views/Seattle.erb
+++ b/app/views/Seattle.erb
@@ -12,27 +12,27 @@
   <h1>Food</h1>
   <ul>
       <li><%= "#{Seattle.food[0]}" %></li>
-    <a href ="https://alturarestaurant.com/">link</a>
+    <a href ="https://alturarestaurant.com/">learn more!</a>
     </li>
     
      <li><%= "#{Seattle.food[1]}" %></li>
-    <a href ="https://sushikashiba.com/">link</a>
+    <a href ="https://sushikashiba.com/">learn more!</a>
     </li>
     
      <li><%= "#{Seattle.food[2]}" %></li>
-    <a href ="https://www.chowfoods.com/hi-life/menus">link</a>
+    <a href ="https://www.chowfoods.com/hi-life/menus">learn more!</a>
     </li>
     
      <li><%= "#{Seattle.food[3]}" %></li>
-    <a href ="http://www.tilikumplacecafe.com/">link</a>
+    <a href ="http://www.tilikumplacecafe.com/">learn more!</a>
     </li>
     
      <li><%= "#{Seattle.food[4]}" %></li>
-    <a href ="http://www.relayrestaurantgroup.com/restaurants/revel/">link</a>
+    <a href ="http://www.relayrestaurantgroup.com/restaurants/revel/">learn more!</a>
     </li>
     
      <li><%= "#{Seattle.food[5]}" %></li>
-    <a href ="https://www.yelp.com/biz/tacos-chukis-seattle">link</a>
+    <a href ="https://www.yelp.com/biz/tacos-chukis-seattle">learn more!</a>
     </li>
     </ul>
     </div>
@@ -40,27 +40,27 @@
     <h1>Attractions</h1>
     <ul>
     <li><%= "#{Seattle.attraction[0]}" %></li>
-    <a href ="https://www.seattleaquarium.org/">link</a>
+    <a href ="https://www.seattleaquarium.org/">learn more!</a>
     </li>
     
     <li><%= "#{Seattle.attraction[1]}" %></li>
-    <a href ="http://seattleartmuseum.org/">link</a>
+    <a href ="http://seattleartmuseum.org/">learn more!</a>
     </li>
     
     <li><%= "#{Seattle.attraction[2]}" %></li>
-    <a href ="https://www.pacificsciencecenter.org/">link</a>
+    <a href ="https://www.pacificsciencecenter.org/">learn more!</a>
     </li>
     
     <li><%= "#{Seattle.attraction[3]}" %></li>
-    <a href ="http://spaceneedle.com/">link</a>
+    <a href ="http://spaceneedle.com/">learn more!</a>
     </li>
     
     <li><%= "#{Seattle.attraction[4]}" %></li>
-    <a href ="http://www.mopop.org/">link</a>
+    <a href ="http://www.mopop.org/">learn more!</a>
     </li>
     
     <li><%= "#{Seattle.attraction[5]}" %></li>
-    <a href ="http://seattlegreatwheel.com/">link</a>
+    <a href ="http://seattlegreatwheel.com/">learn more!</a>
     </li>
     </ul>
     </div>
