--- a/app/views/Miami.erb
+++ b/app/views/Miami.erb
@@ -13,22 +13,22 @@
 
   <ul>
     <li><%= "#{Miami.food[0]}"%><br> 
-    <a href="http://www.versaillesrestaurant.com/">Learn More</a>
+    <a href="http://www.versaillesrestaurant.com/">learn more!</a>
     </li>
     <li><%= "#{Miami.food[1]}"%><br>
-    <a href="http://michaelsgenuine.com/">Learn More</a>
+    <a href="http://michaelsgenuine.com/">learn more!</a>
     </li>
     <li><%= "#{Miami.food[2]}"%> <br>
-    <a href="http://www.garciasmiami.com/">Learn More</a>
+    <a href="http://www.garciasmiami.com/">learn more!</a>
     </li>
     <li><%= "#{Miami.food[3]}"%> <br>
-    <a href="https://www.runchickenrun.com/">Learn More</a>
+    <a href="https://www.runchickenrun.com/">learn more!</a>
     </li>
     <li><%= "#{Miami.food[4]}"%> <br>
-    <a href="http://www.azucaricecream.com/">Learn More</a>
+    <a href="http://www.azucaricecream.com/">learn more!</a>
     </li>
     <li><%= "#{Miami.food[5]}"%><br>
-    <a href="http://iceboxcafe.com/">Learn More</a>
+    <a href="http://iceboxcafe.com/">learn more!</a>
     </li>
     </ul>
     </div>
@@ -36,19 +36,22 @@
     <h1>Attractions</h1>
     <ul>
       <li><%= "#{Miami.attractions[0]}"%><br> 
+      <a href="https://www.miamibeachfl.gov/">learn more!</a>
     </li>
     <li><%= "#{Miami.attractions[1]}"%><br>
+    <a href="http://www.miamiandbeaches.com/places-to-see/miami-beach/art-deco-historic-district">learn more!</a>
     </li>
     <li><%= "#{Miami.attractions[2]}"%> <br>
-    <a href="http://vizcaya.org">Learn More</a>
+    <a href="http://vizcaya.org">learn more!</a>
     </li>
     <li><%= "#{Miami.attractions[3]}"%> <br>
+    <a href="https://www.nps.gov/ever/index.htm">learn more!</a>
     </li>
     <li><%= "#{Miami.attractions[4]}"%> <br>
-    <a href="http://www.baysidemarketplace.com/">Learn More</a>
+    <a href="http://www.baysidemarketplace.com/">learn more!</a>
     </li>
     <li><%= "#{Miami.attractions[5]}"%> <br>
-    <a href="http://www.bayfrontparkmiami.com/">Learn More</a>
+    <a href="http://www.bayfrontparkmiami.com/">learn more!</a>
     </li>
     </ul>
     </div>
