--- a/app/views/NYC.erb
+++ b/app/views/NYC.erb
@@ -12,27 +12,27 @@
   <h1>Food</h1>
   <ul>
     <li><%= "#{New_York_City.food[0]}" %></li>
-    <a href ="https://www.gramercytavern.com/menus/the-tavern/">link</a>
+    <a href ="https://www.gramercytavern.com/menus/the-tavern/">learn more!</a>
     </li>
     
      <li><%= "#{New_York_City.food[1]}" %></li>
-    <a href ="https://balthazarny.com/">link</a>
+    <a href ="https://balthazarny.com/">learn more!</a>
     </li>
     
      <li><%= "#{New_York_City.food[2]}" %></li>
-    <a href ="http://www.oysterbarny.com/">link</a>
+    <a href ="http://www.oysterbarny.com/">learn more!</a>
     </li>
     
      <li><%= "#{New_York_City.food[3]}" %></li>
-    <a href ="http://www.patsyspizzeria.us/">link</a>
+    <a href ="http://www.patsyspizzeria.us/">learn more!</a>
     </li>
     
      <li><%= "#{New_York_City.food[4]}" %></li>
-    <a href ="http://www.russanddaughterscafe.com/">link</a>
+    <a href ="http://www.russanddaughterscafe.com/">learn more!</a>
     </li>
     
      <li><%= "#{New_York_City.food[5]}" %></li>
-    <a href ="http://www.pisillopanini.com/">link</a>
+    <a href ="http://www.pisillopanini.com/">learn more!</a>
     </li>
     </ul>
     </div>
@@ -40,27 +40,27 @@
     <h1>Attractions</h1>
     <ul>
   <li><%= "#{New_York_City.attractions[0]}" %></li>
-    <a href ="http://www.esbnyc.com/ ">link</a>
+    <a href ="http://www.esbnyc.com/ ">learn more!</a>
     </li>
     
     <li><%= "#{New_York_City.attractions[1]}" %></li>
-    <a href ="https://www.statueoflibertytickets.com/?gclid=CjwKCAjwtIXbBRBhEiwAWV-5nj14vS7-Z0geb2v3agwPY_4mDEc107GEcBn_2Ik50avt67QisUt7hBoC0ZcQAvD_BwE ">link</a>
+    <a href ="https://www.statueoflibertytickets.com/?gclid=CjwKCAjwtIXbBRBhEiwAWV-5nj14vS7-Z0geb2v3agwPY_4mDEc107GEcBn_2Ik50avt67QisUt7hBoC0ZcQAvD_BwE ">learn more!</a>
     </li>
     
     <li><%= "#{New_York_City.attractions[2]}" %></li>
-    <a href ="https://oneworldobservatory.com/en-US ">link</a>
+    <a href ="https://oneworldobservatory.com/en-US ">learn more!</a>
     </li>
     
     <li><%= "#{New_York_City.attractions[3]}" %></li>
-    <a href ="https://www.sightseeingpass.com/es/new-york/attractions/metropolitan-museum-of-art?aid=66&gclid=CjwKCAjwtIXbBRBhEiwAWV-5nqwTQ84sQR4J5QLqaQn8pbLRvD6rGVLlP7PZmMNyJCo4Ve-ABraJehoCOscQAvD_BwE">link</a>
+    <a href ="https://www.sightseeingpass.com/es/new-york/attractions/metropolitan-museum-of-art?aid=66&gclid=CjwKCAjwtIXbBRBhEiwAWV-5nqwTQ84sQR4J5QLqaQn8pbLRvD6rGVLlP7PZmMNyJCo4Ve-ABraJehoCOscQAvD_BwE">learn more!</a>
     </li>
     
     <li><%= "#{New_York_City.attractions[4]}" %></li>
-    <a href ="https://www.madametussauds.com/new-york/en/tickets/?gclid=CjwKCAjwtIXbBRBhEiwAWV-5nhiioMwtWOYDIzZ03fPmUso-OP0xnB5pxfQ1izpg3-SgmceKFukHdxoCpeoQAvD_BwE">link</a>
+    <a href ="https://www.madametussauds.com/new-york/en/tickets/?gclid=CjwKCAjwtIXbBRBhEiwAWV-5nhiioMwtWOYDIzZ03fPmUso-OP0xnB5pxfQ1izpg3-SgmceKFukHdxoCpeoQAvD_BwE">learn more!</a>
     </li>
     
     <li><%= "#{New_York_City.attractions[5]}" %></li>
-    <a href ="https://www.nyc.com/broadway_tickets/?gclid=CjwKCAjw14rbBRB3EiwAKeoG_2sWhn49Qt2RsbhoXVLMPeC6_zzooln-EYENF31jy8BrRowNQnrf5xoCAt4QAvD_BwE">link</a>
+    <a href ="https://www.nyc.com/broadway_tickets/?gclid=CjwKCAjw14rbBRB3EiwAKeoG_2sWhn49Qt2RsbhoXVLMPeC6_zzooln-EYENF31jy8BrRowNQnrf5xoCAt4QAvD_BwE">learn more!</a>
     </li>
     </ul>
     </div>
