--- a/app/views/Chicago.erb
+++ b/app/views/Chicago.erb
@@ -70,7 +70,7 @@
     </body>
     </html>
 <style>
-  img{https://document-export.canva.com/DAC_O7yCyRw/14/preview/0001-1627122833.png
+  img{
     width: 1265px;
     height: 500px;
   }
