--- a/app/views/Seattle.erb
+++ b/app/views/Seattle.erb
@@ -68,7 +68,7 @@
     </body>
     </html>
 <style>
-  img{https://document-export.canva.com/DAC_O618XfQ/9/preview/0001-1627122922.png
+  img{
     width: 1265px;
     height: 500px;
   }
