--- a/app/views/NYC.erb
+++ b/app/views/NYC.erb
@@ -68,7 +68,7 @@
     </body>
     </html>
 <style>
-  img{https://document-export.canva.com/DAC_Oxnp5xI/14/preview/0001-1627164602.png
+  img{
     width: 1265px;
     height: 500px;
   }
