--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -8,8 +8,8 @@
  </head>
  
  <style>
-  img{https://document-export.canva.com/DAC_NuiJHZs/54/preview/0001-1626973602.png
-    width: 1265px;
+  img{
+    width: 100%;
     height: 500px;
   }
 
