new and improved

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -9,7 +9,7 @@
  
  <style>
   img{
-    width: 100%;
+    width: 1265px;
     height: 500px;
   }
 
@@ -22,3 +22,24 @@
     width: 600px;
   }
 </style>
+
+<img src="https://document-export.canva.com/DAC_PH7Ww5E/24/preview/0001-1630545534.png">
+ </head>
+ 
+ <style>
+  img{
+    width: 1265px;
+    height: 500px;
+  }
+
+  .food{
+    display: inline-block;
+    width: 600px;
+  }
+  .attraction{
+    display: inline-block;
+    width: 600px;
+  }
+</style>
+
+
