--- a/app/views/NYC.erb
+++ b/app/views/NYC.erb
@@ -72,6 +72,9 @@
     width: 1265px;
     height: 500px;
   }
+  body{
+  font-family: "Goudy Bookletter 1911", monospace;
+}
 
   .food{
     display: inline-block;
