--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html>
   <head>
     <title>KWKtravelz</title>
@@ -12,6 +12,9 @@
     width: 1265px;
     height: 500px;
   }
+  body{
+  font-family: "Goudy Bookletter 1911", monospace;
+}
 
   .food{
     display: inline-block;
@@ -31,6 +34,7 @@
     width: 1265px;
     height: 500px;
   }
+  
 
   .food{
     display: inline-block;
@@ -40,6 +44,44 @@
     display: inline-block;
     width: 600px;
   }
+      ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+   li {
+         display: inline-block;
+   }
+
 </style>
+
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>KWKtravelz</title>
+  </head>
+  <body>
+
+  </body>
+  <h2><center>The following cities all house Kode with Klossy camps! Click the one you're heading to and check out popular eats and attractions! </h2></center>
+  <h2><center>
+    <ul>
+      <li> <a href = "/raleigh">Raleigh,NC</a> 
+      </li>
+      <li> <a href = "/miami">Miami,FL</a>
+      </li>
+      <li> <a href = "/LA">Los Angeles,CA</a> 
+      </li>
+      <li> <a href = "/seattle">Seattle,WA</a> 
+      </li>
+      <li> <a href = "/chicago">Chicago,IL</a> 
+      </li>
+      <li> <a href = "/nyc">New York City,NY</a> 
+      </li>
+    </ul>
+    </h2>  </center>
+
+            
+</html>
 
 
