--- a/app/views/LA.erb
+++ b/app/views/LA.erb
@@ -73,6 +73,9 @@
     width: 1265px;
     height: 500px;
   }
+  body{
+  font-family: "Goudy Bookletter 1911", monospace;
+}
 
   .food{
     display: inline-block;
