--- a/app/views/Miami.erb
+++ b/app/views/Miami.erb
@@ -64,6 +64,9 @@
     width: 1265px;
     height: 500px;
   }
+  body{
+  font-family: "Goudy Bookletter 1911", monospace;
+}
 
   .food{
     display: inline-block;
