--- a/app/views/Raleigh.erb
+++ b/app/views/Raleigh.erb
@@ -74,7 +74,9 @@
     width: 1265px;
     height: 500px;
   }
-
+body{
+  font-family: "Goudy Bookletter 1911", monospace;
+}
   .food{
     display: inline-block;
     width: 600px;
