--- a/app/views/LA.erb
+++ b/app/views/LA.erb
@@ -65,6 +65,7 @@
      </li>
     </ul>
     </div>
+      <a class="homelink" href="/">Home</a>
     </div>
     </body>
     </html>
@@ -85,4 +86,9 @@
     display: inline-block;
     width: 600px;
   }
+    .everything {
+    height: 100%;
+    /*background: red;*/
+    background: linear-gradient(#00ced1, #00bfff);
+    background-repeat: repeat-x
 </style>
