--- a/app/views/Raleigh.erb
+++ b/app/views/Raleigh.erb
@@ -65,8 +65,11 @@
     <a href="https://crabtree-valley-mall.com/">learn more!</a>
    </li>
     </ul>
+    
     </div>
+      <a class="homelink" href="/">Home</a>
     </div>
+
     </body>
     </html>
 <style>
@@ -85,4 +88,13 @@ body{
     display: inline-block;
     width: 600px;
   }
+  
+  .everything {
+    height: 100%;
+    /*background: red;*/
+    background: linear-gradient(#00ced1, #00bfff);
+    background-repeat: repeat-x
+}
+
+
 </style>
