--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -52,6 +52,10 @@
    li {
          display: inline-block;
    }
+   
+   body {
+     background-image: url ("https://document-export.canva.com/DAC_Tp238RM/4/preview/0001-1630782928.png");
+   }
 
 </style>
 
