--- a/app/views/Chicago.erb
+++ b/app/views/Chicago.erb
@@ -65,7 +65,9 @@
     <a href="https://www.msichicago.org/">learn more!</a>
     </li>
     </ul>
+    
     </div>
+      <a class="homelink" href="/">Home</a>
     </div>
     </body>
     </html>
@@ -86,4 +88,10 @@
     display: inline-block;
     width: 600px;
   }
+  
+    .everything {
+    height: 100%;
+    /*background: red;*/
+    background: linear-gradient(#00ced1, #00bfff);
+    background-repeat: repeat-x
 </style>
