--- a/app/views/Miami.erb
+++ b/app/views/Miami.erb
@@ -55,6 +55,7 @@
     </li>
     </ul>
     </div>
+      <a class="homelink" href="/">Home</a>
     </div>
     </body>
     </html>
@@ -76,4 +77,9 @@
     display: inline-block;
     width: 600px;
   }
+    .everything {
+    height: 100%;
+    /*background: red;*/
+    background: linear-gradient(#00ced1, #00bfff);
+    background-repeat: repeat-x
 </style>
